; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_tda18271c2dd.c_UpdateRegs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_tda18271c2dd.c_UpdateRegs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tda_state = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tda_state*, i64, i64)* @UpdateRegs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UpdateRegs(%struct.tda_state* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.tda_state*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.tda_state* %0, %struct.tda_state** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.tda_state*, %struct.tda_state** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load %struct.tda_state*, %struct.tda_state** %4, align 8
  %10 = getelementptr inbounds %struct.tda_state, %struct.tda_state* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = load i64, i64* %5, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %5, align 8
  %16 = sub i64 %14, %15
  %17 = add i64 %16, 1
  %18 = call i32 @WriteRegs(%struct.tda_state* %7, i64 %8, i32* %13, i64 %17)
  ret i32 %18
}

declare dso_local i32 @WriteRegs(%struct.tda_state*, i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
